  - Update to add compatibility for MC 1.17, courtesy of Warriorrrr and LlmDL with PR #5001.
    - Should account for most of the changes so far. More to come as the API is fleshed out by Spigot.
    - Revert on unclaim feature will probably not like servers using the World Height data pack.
    - Config and world files will update their lists of blocks-ignored-from-regeneration automatically.
0.97.0.5:
  - Fix Bonemeal usage not working.
  - Add candles to the bypass for flint & steel.
  - Protect candles from being placed on cakes.
  - Switch over to using new cancelling for PojectileHitEvents.
0.97.0.6:
  - Add upkeep costs for Towns to toggle and remain neutral.
    - Similar to nation peaceful costs.
    - Closes #5003.
  - Fix nations not paying peaceful upkeep if their nation upkeep was 0.
  - New Config Option: economy.price_town_neutrality
    - Default: 25.0
    - The daily upkeep to remain neutral, paid by the Town bank. If unable to pay, neutral/peaceful status is lost.
  - Language files bumped to 0.108.
  - Improve message shown to towns which are invited to a nation.
    - Closes #4998.
  - Give Glowing Item Frames the same protections we give to the differently-abled Item Frames.
0.97.0.7:
  - New Command: /town purge {days}
    - Kicks residents from the town who have been inactive for the given number of days.
    - NPCs and mayors are exempt.
  - New Permission Node: towny.command.town.purge
    - Child node of towny.command.town.*
    - Not required to be added to the townyperms.yml.
  - Fix wilderness entity explosions' reverting being mucked with by the EventWar.
    - Closes #5014. 
  - Fix towny.bypass_death_costs node not working in all situations.
  - Fix players res friending themselves or NPCs, courtesy of Warriorrrr with PR #5017.
  - Fix building w/o github-actions maven profile; Ensure JVM 8 compatiblity with JDK9+, courtesy of FlagCourier with PR #5019.