@@ -6266,3 +6266,4 @@ v0.92.0.11:
   - Fix towny.bypass_death_costs node not working in all situations.
   - Fix players res friending themselves or NPCs, courtesy of Warriorrrr with PR #5017.
   - Fix building w/o github-actions maven profile; Ensure JVM 8 compatiblity with JDK9+, courtesy of FlagCourier with PR #5019.
+  - Fix ExceptionInInitializerError preventing Towny from starting up.
